--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@
                             <button class="code-action-btn" id="console-btn" title="Toggle Console">
                                 <i data-lucide="terminal"></i>
                             </button>
+                            <button class="code-action-btn" id="refresh-preview-btn" title="Refresh Preview" style="display:none;">
+                                <i data-lucide="refresh-cw"></i>
+                            </button>
                             <button class="code-action-btn" id="preview-btn" title="Preview">
                                 <i data-lucide="eye"></i>
                             </button>
@@ -410,7 +413,7 @@
                 </div>
                 <div class="statusbar-right">
                     <span class="statusbar-item" id="statusbar-lines">0 lines</span>
-                    <span class="statusbar-item" id="statusbar-version">v1.4.2</span>
+                    <span class="statusbar-item" id="statusbar-version">v1.4.3</span>
                 </div>
             </div>
         </main>
@@ -958,7 +961,7 @@
                     <div class="settings-about">
                         <img src="assets/icons/icon-192.png" alt="AetherIDE" class="about-logo-img">
                         <div class="about-name">AetherIDE</div>
-                        <div class="about-version">v1.4.2</div>
+                        <div class="about-version">v1.4.3</div>
                         <div class="about-tagline">Code at the speed of thought</div>
                         <div class="about-links">
                             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="about-link discord-link">
