--- a/404.html
+++ b/404.html
@@ -124,7 +124,8 @@
         <div class="terminal-line">$ cd /requested-page — <span>Error: path not found</span></div>
         <p>The page you're looking for doesn't exist or has been moved. Let's get you back to building something amazing.</p>
         <div class="actions">
-            <a href="/" class="btn btn-primary">⚡ Back to AetherIDE</a>
+            <a href="/" class="btn btn-primary">⚡ Back to Home</a>
+            <a href="/app" class="btn btn-secondary">🚀 Open Editor</a>
             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="btn btn-secondary">💬 Get Help</a>
         </div>
     </div>
