--- a/index.html
+++ b/index.html
@@ -892,6 +892,7 @@
             <div class="footer-links">
                 <a href="/app">App</a>
                 <a href="https://discord.gg/7YKCvPzKEQ" target="_blank">Discord</a>
+                <a href="https://www.instagram.com/theonly1emo?igsh=MWc1N2J6c282cmppZA==" target="_blank">Instagram</a>
                 <a href="https://github.com" target="_blank">GitHub</a>
             </div>
         </div>
