--- a/editor.html
+++ b/editor.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="css/chat.css">
     <link rel="stylesheet" href="css/modal.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/setup.css">
 
     <!-- PWA -->
     <link rel="manifest" href="manifest.json">
@@ -413,7 +414,7 @@
                 </div>
                 <div class="statusbar-right">
                     <span class="statusbar-item" id="statusbar-lines">0 lines</span>
-                    <span class="statusbar-item" id="statusbar-version">v1.4.4</span>
+                    <span class="statusbar-item" id="statusbar-version">v1.4.5</span>
                 </div>
             </div>
         </main>
@@ -961,7 +962,7 @@
                     <div class="settings-about">
                         <img src="assets/icons/icon-192.png" alt="AetherIDE" class="about-logo-img">
                         <div class="about-name">AetherIDE</div>
-                        <div class="about-version">v1.4.4</div>
+                        <div class="about-version">v1.4.5</div>
                         <div class="about-tagline">Code at the speed of thought</div>
                         <div class="about-links">
                             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="about-link discord-link">
@@ -1035,6 +1036,7 @@
     <script src="js/modes/team.js"></script>
     <script src="js/sandbox.js"></script>
     <script src="js/settings.js"></script>
+    <script src="js/setup.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
