--- a/editor.html
+++ b/editor.html
@@ -382,6 +382,9 @@
                                 <span class="console-title">Console</span>
                             </div>
                             <div class="console-header-right">
+                                <button class="console-action-btn" id="console-refresh-btn" title="Re-run Preview">
+                                    <i data-lucide="refresh-cw"></i>
+                                </button>
                                 <button class="console-action-btn" id="console-clear-btn" title="Clear Console">
                                     <i data-lucide="trash-2"></i>
                                 </button>
@@ -414,7 +417,7 @@
                 </div>
                 <div class="statusbar-right">
                     <span class="statusbar-item" id="statusbar-lines">0 lines</span>
-                    <span class="statusbar-item" id="statusbar-version">v1.4.6</span>
+                    <span class="statusbar-item" id="statusbar-version">v1.4.7</span>
                 </div>
             </div>
         </main>
@@ -962,7 +965,7 @@
                     <div class="settings-about">
                         <img src="assets/icons/icon-192.png" alt="AetherIDE" class="about-logo-img">
                         <div class="about-name">AetherIDE</div>
-                        <div class="about-version">v1.4.6</div>
+                        <div class="about-version">v1.4.7</div>
                         <div class="about-tagline">Code at the speed of thought</div>
                         <div class="about-links">
                             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="about-link discord-link">
