--- a/editor.html
+++ b/editor.html
@@ -417,7 +417,7 @@
                 </div>
                 <div class="statusbar-right">
                     <span class="statusbar-item" id="statusbar-lines">0 lines</span>
-                    <span class="statusbar-item" id="statusbar-version">v1.4.7</span>
+                    <span class="statusbar-item" id="statusbar-version">v1.4.8</span>
                 </div>
             </div>
         </main>
@@ -961,11 +961,21 @@
                         </div>
                     </div>
 
+                    <!-- Changelog -->
+                    <div class="settings-group">
+                        <label class="settings-label">
+                            <i data-lucide="git-commit" class="settings-label-icon"></i>
+                            Changelog
+                        </label>
+                        <div class="changelog-container" id="changelog-list">
+                        </div>
+                    </div>
+
                     <!-- About -->
                     <div class="settings-about">
                         <img src="assets/icons/icon-192.png" alt="AetherIDE" class="about-logo-img">
                         <div class="about-name">AetherIDE</div>
-                        <div class="about-version">v1.4.7</div>
+                        <div class="about-version">v1.4.8</div>
                         <div class="about-tagline">Code at the speed of thought</div>
                         <div class="about-links">
                             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="about-link discord-link">
