--- a/editor.html
+++ b/editor.html
@@ -417,7 +417,7 @@
                 </div>
                 <div class="statusbar-right">
                     <span class="statusbar-item" id="statusbar-lines">0 lines</span>
-                    <span class="statusbar-item" id="statusbar-version">v1.4.9</span>
+                    <span class="statusbar-item" id="statusbar-version">v1.5.0</span>
                 </div>
             </div>
         </main>
@@ -1004,7 +1004,7 @@
                     <div class="settings-about">
                         <img src="assets/icons/icon-192.png" alt="AetherIDE" class="about-logo-img">
                         <div class="about-name">AetherIDE</div>
-                        <div class="about-version">v1.4.9</div>
+                        <div class="about-version">v1.5.0</div>
                         <div class="about-tagline">Code at the speed of thought</div>
                         <div class="about-links">
                             <a href="https://discord.gg/7YKCvPzKEQ" target="_blank" rel="noopener" class="about-link discord-link">
@@ -1068,6 +1068,7 @@
 
     <!-- Scripts -->
     <script src="js/utils.js"></script>
+    <script src="js/zip.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/themes.js"></script>
     <script src="js/api.js"></script>
