--- a/index.html
+++ b/index.html
@@ -1453,7 +1453,7 @@
                     keep the project alive, and make AI-powered coding accessible to everyone.
                 </p>
                 <div class="support-actions">
-                    <a href="https://buymeacoffee.com/AetherIDE" target="_blank" rel="noopener" class="support-btn coffee-btn">
+                    <a href="https://buymeacoffee.com/aetheride" target="_blank" rel="noopener" class="support-btn coffee-btn">
                         <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M20.216 6.415l-.132-.666c-.119-.598-.388-1.163-1.001-1.379-.197-.069-.42-.098-.57-.241-.152-.143-.196-.366-.231-.572-.065-.378-.125-.756-.192-1.133-.057-.325-.102-.69-.25-.987-.195-.4-.597-.634-.996-.788a5.723 5.723 0 00-.626-.194c-1-.263-2.05-.36-3.077-.416a25.834 25.834 0 00-3.7.062c-.915.083-1.88.184-2.75.5-.318.116-.646.256-.888.501-.297.302-.393.77-.177 1.146.154.267.415.456.692.58.36.162.737.284 1.123.366 1.075.238 2.189.331 3.287.37 1.218.05 2.437.01 3.65-.118.299-.033.598-.073.896-.119.352-.054.578-.513.474-.834-.124-.383-.457-.531-.834-.473-.466.074-.96.108-1.382.146-1.177.08-2.358.082-3.536.006a22.228 22.228 0 01-1.157-.107c-.086-.01-.18-.025-.258-.036-.243-.036-.484-.08-.724-.13-.111-.024-.253-.062-.291-.189-.023-.078.005-.159.054-.228a1.1 1.1 0 01.343-.259c.186-.088.393-.158.602-.199.796-.155 1.613-.236 2.426-.264a25.123 25.123 0 013.58.165c.263.04.522.1.778.17.168.046.378.108.443.298.029.084.01.175-.021.252a1.21 1.21 0 01-.095.189c-.058.082-.142.153-.18.249-.049.124-.015.254.023.373l.247.866c.063.22.158.453.355.558.242.13.534.057.758-.1.193-.136.33-.339.46-.535l.172-.268c.063-.098.129-.202.133-.318.004-.119-.06-.234-.105-.344z"/><path d="M8.712 14.403c.024.026.05.05.078.072.286.224.631.342.972.418.362.08.73.119 1.097.12h.003c.37 0 .74-.04 1.1-.12.34-.076.687-.194.972-.418.03-.022.056-.046.08-.072H8.71v.002z"/><path d="M17.21 10.68c-.082-.389-.323-.734-.703-.898-.281-.121-.59-.146-.895-.14-.545.01-1.08.147-1.592.328l.038-.133c.071-.25.14-.503.178-.762.037-.254.038-.523-.064-.767a1.02 1.02 0 00-.462-.497c-.164-.09-.35-.136-.536-.165a5.7 5.7 0 00-.556-.044c-.672-.018-1.345.015-2.014.082-.403.04-.817.1-1.19.265-.258.113-.48.306-.559.583-.058.204-.026.422.035.623.064.214.16.414.272.6.2.338.456.646.742.912.165.153.338.296.525.415.044.028.093.056.1.11.007.058-.048.098-.089.131a3.12 3.12 0 01-.516.294 6.5 6.5 0 01-1.293.454c-.166.042-.336.076-.498.133-.199.07-.38.193-.454.395-.067.183-.026.387.046.562.084.204.208.388.358.544.29.302.652.512 1.03.656.462.176.953.27 1.447.313.557.048 1.119.03 1.674-.034.501-.058.997-.163 1.464-.35.386-.154.756-.371 1.04-.68.148-.162.268-.352.325-.566.052-.193.043-.4-.023-.59a1.58 1.58 0 00-.328-.483 4.23 4.23 0 00-.5-.39c.097-.06.19-.128.276-.204.26-.226.468-.508.599-.826.096-.234.137-.49.093-.74z"/></svg>
                         Support AetherIDE ❤️
                     </a>
@@ -1490,7 +1490,7 @@
             <div class="footer-links">
                 <a href="/app">App</a>
                 <a href="#roadmap">Roadmap</a>
-                <a href="https://buymeacoffee.com/AetherIDE" target="_blank">Support ❤️</a>
+                <a href="https://buymeacoffee.com/aetheride" target="_blank">Support ❤️</a>
                 <a href="https://discord.gg/7YKCvPzKEQ" target="_blank">Discord</a>
                 <a href="https://www.instagram.com/theonly1emo?igsh=MWc1N2J6c282cmppZA==" target="_blank">Instagram</a>
             </div>
